--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://docs.google.com/document/d/1PkFobECO8ppaRZeKcmzj3zX7P73DG92O9qWVQwN3u5I/edit?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1zcC20BBDcNuSmGYsXK-bK5phb3kvn5tj/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -450,8 +450,8 @@ deploying changes both locally via PuTTY and through CI/CD pipelines.</li>
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://docs.google.com/document/d/1PkFobECO8ppaRZeKcmzj3zX7P73DG92O9qWVQwN3u5I/edit?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://docs.google.com/document/d/1PkFobECO8ppaRZeKcmzj3zX7P73DG92O9qWVQwN3u5I/edit?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1zcC20BBDcNuSmGYsXK-bK5phb3kvn5tj/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1zcC20BBDcNuSmGYsXK-bK5phb3kvn5tj/view?usp=sharing" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
         <!-- <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
