--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://www.capgemini.com/in-en/" style="color:#12d640">capgemini</a><br> </h4>
                 <h5 style="text-align:left;">June 2024 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+                <p style="text-align:left;color:#fff"><em>Software Engineer-Banking Client (Wealth & Retail Banking) </em></p>
                 <ul style="text-align:left;">
                   <li>Developed and optimized backend microservices using Java, Spring Boot, and Quarkus, ensuring secure and scalable integration for retail banking         
 workflows.</li>
@@ -479,9 +479,9 @@ deploying changes both locally via PuTTY and through CI/CD pipelines.</li>
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Bhagalpur</p>
-            <p>Bihar</p>
-            <p>812005</p>
+            <p>Bangalore</p>
+            <p>Karnataka</p>
+            <p>560103</p>
           </div>
         </div>
 
