--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ deploying changes both locally via PuTTY and through CI/CD pipelines.</li>
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
             <p>Bangalore</p>
-            <p>karnataka</p>
+            <p>Karnataka</p>
             <p>560103</p>
           </div>
         </div>
