--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
               <ul style="text-align:left;color:#fff;">
                 <li>Database Management Systems</li>
-                <li>Java</li>
-                <li>microservices</li>
+                <li>Data Structures & Algorithms</li>
+                <li>Software Engineering</li>
               </ul>
               </div>
     <div class="portfolio">
