--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.capgemini.com/in-en/" style="color:#12d640">capgemini</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.capgemini.com/in-en/" style="color:#12d640">Capgemini</a><br> </h4>
                 <h5 style="text-align:left;">June 2024 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer-Banking Client (Wealth & Retail Banking) </em></p>
                 <ul style="text-align:left;">
