--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@ deploying changes both locally via PuTTY and through CI/CD pipelines.</li>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>Hospital Management System (Microservices-Based)</h4></center>
+          <center><h4>ServiceSphere – Enterprise Microservices Platform</h4></center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/hospital managementsystem.png" class="img-fluid" alt="">
+            <img src="assets/img/project/servicesphere.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               
               <div class="portfolio-links">
-                <a href="projects/hospitalmanagementsystem.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+                <a href="projects/ServiceSphere.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
