--- a/projects/ServiceSphere.html
+++ b/projects/ServiceSphere.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Hospital Management System</title>
+    <title>ServiceSphere – Enterprise Microservices Platform</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,22 +43,22 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Hospital Management System</h2>
+              <h2 style="color:#12d640">ServiceSphere – Enterprise Microservices Platform</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Java 21, Spring Boot 3.5.x, Spring Cloud (Eureka, Gateway), Microservices, MySQL, JPA/Hibernate, Lombok, REST APIs, Maven, Postman</li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/sushantshekhar23/HospitalManagementSystem-using-microservices/tree/main" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>: Java , Spring Boot , Spring Cloud (Eureka, Config Server, API Gateway), Microservices Architecture, Docker, Docker Compose, Docker Hub, Git, REST APIs, Maven, GitHub Actions, Postman</li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/sushantshekhar23/microservices-docker-ci/tree/main" target="_blank">Project Link</a></li>
               </ul>
   
               <p>
-                > Built a Microservices-based Hospital Management System using Spring Boot 3.5.x, Java 21, and Spring Cloud. </p>
+                > •	Designed, developed, and deployed Spring Boot microservices following a cloud-native architecture.</p>
               </p>
               <p>
-                > Developed services such as Patient, Physician, Appointment, each with separate REST APIs and MySQL integration.</p>
+                > •	Containerized applications using Docker to ensure consistent environments across development and production.</p>
               </p>
               <p>
-                > Configured Eureka Server for service discovery and Spring Cloud Gateway for API routing & load balancing.</p>
+                > • Implemented CI/CD pipelines with GitHub Actions to automate build, test, and deployment of Docker images.</p>
               </p>
-              <p>> Applied clean layered architecture with JPA, Lombok, and Maven for maintainable code and tested endpoints via Postman </p>
+              <p>> • Improved deployment reliability and reduced manual release effort by automating Docker image publishing to Docker Hub.</p>
             </p>
             </div>
   
