--- a/projects/ServiceSphere.html
+++ b/projects/ServiceSphere.html
@@ -50,15 +50,15 @@
               </ul>
   
               <p>
-                > •	Designed, developed, and deployed Spring Boot microservices following a cloud-native architecture.</p>
+                > Designed, developed, and deployed Spring Boot microservices following a cloud-native architecture.</p>
               </p>
               <p>
-                > •	Containerized applications using Docker to ensure consistent environments across development and production.</p>
+                > Containerized applications using Docker to ensure consistent environments across development and production.</p>
               </p>
               <p>
-                > • Implemented CI/CD pipelines with GitHub Actions to automate build, test, and deployment of Docker images.</p>
+                > Implemented CI/CD pipelines with GitHub Actions to automate build, test, and deployment of Docker images.</p>
               </p>
-              <p>> • Improved deployment reliability and reduced manual release effort by automating Docker image publishing to Docker Hub.</p>
+              <p>> Improved deployment reliability and reduced manual release effort by automating Docker image publishing to Docker Hub.</p>
             </p>
             </div>
   
